@@ -25,7 +25,7 @@
 
     <groupId>ch.dvbern.ebegu</groupId>
     <artifactId>ebegu</artifactId>
-    <version>2021.2.0</version>
+    <version>2021.3.0</version>
     <packaging>pom</packaging>
 
     <name>eBEGU - Multimodule Project</name>
@@ -928,7 +928,10 @@
                 <configuration>
                     <redirectTestOutputToFile>false</redirectTestOutputToFile>
                     <!--port offset fuer embedded wildfly -->
-                    <argLine>-Djboss.socket.binding.port-offset=10000</argLine>
+                    <argLine>
+                        -Djboss.socket.binding.port-offset=10000
+                        --illegal-access=permit
+                    </argLine>
                     <environmentVariables>
                         <!--suppress UnresolvedMavenProperty -->
                         <JBOSS_HOME>${jbossHome}</JBOSS_HOME>
